--- a/cyclistic_report.Rmd
+++ b/cyclistic_report.Rmd
@@ -2,19 +2,11 @@
 title: "Cyclistic bike-share analysis"
 # author: "Anne Wilson"
 date: "2024-02-29"
-output: html_document
+output: md_document
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE)
-```
-
-```{r}
-knit: (function(input_file, encoding) {
-    out_dir <- 'docs';
-    rmarkdown::render(input_file,
-      encoding=encoding,
-      output_file=file.path(dirname(input_file), out_dir, 'index.html'))})
 ```
 
 ```{r}
@@ -35,10 +27,10 @@ I have been tasked with answering the following question.
 Identify how annual members and casual riders differ in their use of Cyclistic bikes to understand why casual riders might choose to buy Cyclistic annual memberships and how digital media could influence them to do so.
 
 ## Data
-I decided to use data for the most recent complete year - that is for 2023. The data includes details for each ride: start time, end time, the station the ride started from, the station it ended at and the type of rider (member or casual). A limitation of this data is that it is not possible to determine how individual riders are using the bikes - there could be relatively few riders using the bikes every day, several times a day, or there could be lots of riders taking the bikes out just once or twice in the year. This is something that could be very different between members and casual riders, and is important to take note of when considering the likelihood that casual riders will choose to become members.
+I decided to use data for the most recent complete year - that is for 2023. The data includes details for each ride: start time, end time, the station the ride started from, the station it ended at and the type of rider (member or casual). A limitation of this data is that it is not possible to determine how individual riders are using the bikes - there could be relatively few riders using the bikes every day, several times a day, or there could be lots of riders taking the bikes out just once or twice in the year. This is something that could be very different between members and casual riders, and is important to take note of when considering whether casual riders are likely to choose to become members.
 
 ## Analysis
-The results of my analysis showed some differences in both the time of day and the day of the week that the bikes were used by the two groups of riders. There were also differences in the lengths of the rides and the stations which were most used. I also looked at variations in the number and length of rides across the year, but these were very similar for both groups of riders. These differences suggest that more of the rides made by casual riders were for leisure than is the case for rides made by members, which were more likely to be for commuting.
+The results of my analysis showed some differences in both the time of day and the day of the week that the bikes were used by the two groups of riders. There were also differences in the lengths of the rides and the stations which were most used. I also looked at variations in the number and length of rides across the year, but these were very similar for both groups of riders. The differences suggest that more of the rides made by casual riders are for leisure, whereas for members they are more likely to be for commuting.
 
 ### Number of trips by day of week
 Looking at the number of rides taken on each day of the week for each group, it can be seen that, while the number of trips by members is at its highest on week days, the reverse is true for casual riders - they are using the bikes most often at weekends.
@@ -67,7 +59,7 @@ p1 + labs(x = "Day of week", y = "Number of rides (thousands)") +
 ```
 
 ### Number of rides by time of day
-The plot shows the number of rides taken for each hour of the day for each group of riders. The number of rides made by casual riders gradually increases through the day up until 5pm and then decreases. The number of rides made by the Cyclistic members has two peaks, one at 8am and the other at 5pm, suggesting that a lot of these rides are for commuting to work.
+The plot shows the number of rides taken for each hour of the day for each group of riders. The number of rides made by casual riders gradually increases through the day until 5pm and then decreases. The number of rides made by the Cyclistic members has two peaks, at 8am and 5pm, suggesting a lot of these rides are for commuting to work.
 ```{r}
   p3 <- ggplot(bike_share_2023_processed, mapping = aes(x = hour(started_at), fill = member_casual)) +
   geom_bar() +
@@ -157,7 +149,7 @@ bike_share_2023_processed %>%
   theme(legend.position = "none",
         plot.title = element_text(face = "bold", hjust = 0.5),
         strip.background = element_rect(fill="white")) +
-  labs(title = "Ride Length",subtitle = "Number of rides by length of ride, up to 12 hours long.", x = "Ride length (hours)", y = "Number of rides")
+  labs(title = "Ride Length",subtitle = "Number of rides by length of ride, ride length between 1 and 12 hours.", x = "Ride length (hours)", y = "Number of rides")
 ```
 
 ### Number of rides from each station
@@ -165,7 +157,7 @@ A map for each group of riders, showing the number of rides starting from each s
 
 ![Map of Chicago area with bike_share stations sized to show the number of rides starting there for casual riders and Cyclistic members](cyclistic_station_map.png)
 
-### Use of electic and classic bikes
+### Use of electric and classic bikes
 There are two types of bike available in the Cyclistic bike-share scheme - electric bikes and classic bikes. The proportion of rides made on electric bikes was slightly higher for casual riders (38%) than for members (35%) but the difference is small. The use of electric and classic bikes by both groups showed a similar pattern across the week and across the year.
 
 ## Conclusions
